--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,6 +24,7 @@ a:hover {
 
 body {
   margin: 0;
+  overflow: hidden;
   min-width: 320px;
   min-height: 100vh;
 }
